style.css
@import 'https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab';

html { box-sizing: border-box; }
*, *:before, *:after { box-sizing: inherit; }

body {
  font-family: 'Roboto', sans-serif;
  font-size: 20px;
  text-rendering: optimizeLegibility;
  width: 100%;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

main { width: 100%; }

h1, h2, h3, h4 {
  font-family: 'Roboto Slab', serif;
  margin: 0;
  line-height: 1em;
}

h2 {
  font-size: 2rem;
  margin-bottom: 1rem;
}

a, a:visited {
  text-decoration: none;
  font-weight: bold;
  color: #d73136;
}

a:hover, a:active { color: #fb454a; }

header {
  align-items: flex-end;
  background: no-repeat bottom/cover url("img/party.jpg") #1c2232;
  color: white;
  display: flex;
  flex-direction: row;
  height: 30rem;
  justify-content: center;
}

header h1 {
  font-size: 6rem;
  line-height: 1em;
  margin-bottom: 0.2em;
  text-align: center;
}

.intro { margin-top: 1rem; }

p {
  line-height: 1.4em;
  margin: 0;
}

article {
  margin: 0 auto;
  padding: 1rem;
  width: 80%;
  /* max-width: 55rem; */
}

@media (max-width: 600px) {
  article {
    padding: 1rem;
    width: 100%;
  }
}

section { margin-bottom: 1.5rem; }

.info ul {
  margin: 0;
  padding: 0;
}

.info li {
  line-height: 1.5em;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.info .icon {
  color: black;
  display: inline-block;
  font-size: 95%;
  vertical-align: baseline;
  width: 2rem;
}

.projects {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
}

.projects h2 { flex: 1 100%; }

.projects .project {
  background: #2f364c;
  height: 15rem;
  margin-bottom: 2rem;
  width: 22rem;
}

.projects .project h3 {
  background: #2f364c;
  color: white;
  padding: 1rem;
  text-align: center;
}

.projects .project h3 a {
  color: white;
}

.projects .project p {
  background: rgba(255, 255, 255, .8);
  color: black;
  font-size: 75%;
  font-weight: normal;
  height: 100%;
  padding: 1rem;
}

.project.graph-of-life {
  background: no-repeat bottom/cover url("img/graph-of-life.png");
}

.project.delicious-ships {
  background: no-repeat top/cover url("img/delicious-ships.png");
}

